# control-plane

./: Makefile  README.md  control-plane-repository-scaffolding.md  implementation_execution_plan.md  pyproject.toml
api/: http_server.py  routes_artifacts.py  routes_execution.py  routes_intents.py  routes_plans.py
cmd/: control_plane_server.py
compiler/: ir_builder.py  optimizer_pass.py  service_plan_compiler.py
controllers/: execution_controller.py  intent_controller.py  plan_controller.py
events/: event_handlers.py
execution/: adapter_resolver.py  execution_manager.py  runtime_verifier.py
governance/: constraint_evaluator.py  governance_validator.py  policy_engine.py
observability/: tracing.py
planner_client/: planner_client.py
reconciliation/: drift_detector.py  reconciliation_engine.py
registry/: registry_models.py
src/control_plane/api/: contracts.py  routes_artifacts.py  routes_execution.py  routes_intents.py  routes_plans.py
src/control_plane/cmd/: control_plane_server.py
src/control_plane/compiler/: engine_binding.py  service_plan_compiler.py  validation_pass.py
src/control_plane/controllers/: drift_controller.py  execution_controller.py  plan_controller.py
src/control_plane/domain/: __init__.py  models.py  versioning.py
src/control_plane/events/: contracts.py  event_bus.py  event_types.py
tests/: controller_tests.py  integration_tests.py  reconciliation_tests.py  test_api_contracts.py  test_controllers.py  test_domain_contracts.py  test_event_contracts.py  test_integration.py  test_reconciliation.py
(+16 files in other folders)
